@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
-  <Product Id="*" UpgradeCode="{429E2AD1-232C-4C24-9C78-8D06E506505B}" Version="0.6" Language="1033" Name="jfDataLoggerPlus" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{429E2AD1-232C-4C24-9C78-8D06E506505B}" Version="0.1" Language="1033" Name="jfDataLoggerPlus" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
@@ -25,6 +25,7 @@
         <File Id="jfdataloggerplus.jar" Source="jfdataloggerplus.jar"/>
         <File Id="javaforce.jar" Source="javaforce.jar"/>
         <File Id="derby.jar" Source="derby.jar"/>
+        <File Id="jfnative32.dll" Source="jfnative32.dll"/>
         <ServiceInstall Id="ServiceInstaller"
           Type="ownProcess"
           Name="jfDataLoggerPlus"
